2015-04-24 v0.17
+ Added test coverage instructions
+ Added how to use GitHub Pages
+ Replaced urls on raw.githubusercontent.com with my own domain g14n.info

2015-04-21 v0.16
+ Updated travis to Perl v5.20
+ Added perltidyrc config
+ Minor modifications in documentation

2015-02-03 v0.15
+ Added commands to download file samples

2015-01-14 v0.14
+ Added modules to enable cpan client history

2014-12-29 v0.12
+ Added Module::Corelist to bundle

2014-12-18 v0.11
+ Added badges
+ Added git tag instructions
+ Better git branch workflow

2014-12-17 v0.10
+ Updated dependencies versions
+ Fixed some errors in POD

2014-12-02 v0.9
+ Added Changes file
+ Added MINOR_PERL_VERSION in Makefile.PL
+ Updated Artistic license url