@@ -9,3 +9,4 @@
 ^blib
 ^pm_to_blib
 ^gh-pages
+^cover_db
